fixed overlapping issue with octocat

--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,8 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+#game-container {
+  height: calc(100% - 80px);
+  margin-top: 80px;
+}
